Revise title and description in index.html
Updated the website title and meta description for better branding.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BOGAN.CO.NZ — The Sensitive Bogan</title>
-  <meta name="description" content="Bogan apparel & prints. Rough edges. Soft insides. Made in Aotearoa." />
+  <title>BOGAN.CO.NZ</title>
+  <meta name="description" content="Cool shit for Bogans. Rough edges. Big heart. Made in Aotearoa." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -201,3 +201,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
