Revise index.html for content and layout updates
Updated content and structure for the BOGAN.CO.NZ homepage, including changes to hero section, product listings, and contact form.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
     <section class="hero">
       <div class="hero-content">
         <p class="eyebrow">Aotearoa streetwear</p>
-        <h1>The Sensitive Bogan™</h1>
+        <h1>Bogan.co.nz™</h1>
         <p class="subhead">
-          Gritty tees. Desaturated florals. Feelings you’ll deny having.
-          Limited drops — once they’re gone, they’re history.
+          Nice things for rough units.
         </p>
 
         <div class="cta-row">
@@ -47,7 +46,7 @@
       <div class="hero-card">
         <div class="card-top">
           <p class="card-label">Featured</p>
-          <p class="card-title">“Sensitive Bogan” Tee</p>
+          <p class="card-title">“Sleeves Are For Job Interviews” Tee</p>
           <p class="card-note">Black tee • desaturated florals • clean print</p>
         </div>
         <div class="card-bottom">
@@ -201,4 +200,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
