Revise hero section and product details
Updated the hero section and product descriptions for better clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <section class="hero">
       <div class="hero-content">
         <p class="eyebrow">Aotearoa streetwear</p>
-        <h1>Bogan.co.nz™</h1>
+        <h1>BOGAN.co.nz</h1>
         <p class="subhead">
-          Nice things for rough units.
+          Nice things for rough units. NZ-made, limited runs.
         </p>
 
         <div class="cta-row">
@@ -59,7 +59,7 @@
     <section id="shop" class="section">
       <div class="section-head">
         <h2>Shop</h2>
-        <p>Start small. Sell hard. Keep it clean.</p>
+        <p>Pick your tee. Join the drop. Repeat.</p>
       </div>
 
       <div class="grid">
@@ -200,5 +200,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
